# llm

./: .env.example  .gitignore  Cargo.toml  LIE_GROUP_IMPLEMENTATION.md  README.md  build.rs  rustfmt.toml  建议.md
.cargo/: config.toml
.github/workflows/: markdown-link-check.yml
.qwen/: settings.json  settings.json.orig
benches/: lie_group_bench.rs
docs/: 01-GETTING_STARTED.md  02-ARCHITECTURE.md  03-DEVELOPER_GUIDE.md  04-PRODUCTION_READINESS.md  05-P11_REVIEW_FIXES.md  06-KV_CACHE_OPTIMIZATION.md  07-LIE_GROUP_IMPLEMENTATION.md  08-CHANGELOG.md  09-TESTING_GUIDE.md  10-ROADMAP.md  CHANGELOG.md  CHANGES_v0.6.0.md  DEVELOPER_GUIDE.md  DOCUMENT_UPDATE_SUMMARY.md  LIBP2P_INTEGRATION_GUIDE.md  P11_REVIEW.md  README.md  RELEASE_v0.5.0.md  limitations.md
docs/internal/: ALIYUN_QWEN_PROVIDER.md  ALIYUN_REMEDIATION.md  API_KEY_CONFIG.md  L3_REDIS_CACHE_GUIDE.md  LIBP2P_INTEGRATION_GUIDE.md  LIE_GROUP_PERFORMANCE_REPORT.md  NETWORK_IMPLEMENTATION.md  OLLAMA_IMPLEMENTATION.md  P11_FIXES.md  P11_FIX_SUMMARY.md  RELEASE_v0.5.0.md  项目总结.md
docs/wiki/: INDEX.md  README.md
docs/wiki/01-intro/: 01-what-is.md  02-installation.md  03-quickstart.md  04-configuration.md
docs/wiki/02-architecture/: 01-overview.md  02-modules.md  03-dataflow.md  04-lie-group.md
docs/wiki/03-development/: 01-setup.md  02-coding-style.md  03-debugging.md  04-testing.md  05-contributing.md
docs/wiki/04-operations/: 01-deployment.md  02-monitoring.md  03-troubleshooting.md
docs/wiki/05-reference/: 01-api.md  02-config-options.md  03-faq.md  04-glossary.md  05-changelog.md
kv/: ADAPTATION.md  Cargo.toml  INTEGRATION_REPORT.md  README.md
kv/benches/: performance_bench.rs
kv/docs/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  DOCUMENTATION_UPDATES.md  DOCUMENTATION_UPDATE_COMPLETE.md  KV_CACHE_OPTIMIZATION.md  L3_REDIS_CACHE_GUIDE.md  P11_REVIEW.md  REFACTORING_COMPLETE.md  REFACTORING_PLAN.md  REFACTORING_PROGRESS.md  REFACTORING_SUMMARY.md  REMEDIATION_SUMMARY.md
kv/src/: concurrency.rs  config.rs  context_sharding.rs  error.rs  kv_cache.rs  kv_chunk.rs  kv_compression.rs  kv_compressor.rs  kv_index.rs  lib.rs  metrics.rs  multi_level_cache.rs  prefetcher.rs  redis_backend.rs
kv/tests/: concurrency_tests.rs  fuzz_tests.rs  integration_tests.rs  property_tests.proptest-regressions  property_tests.rs
proto/: consensus.proto  node_rpc.proto
scripts/: verify_links.sh
src/: assessor_registry.rs  async_commit.rs  block.rs  blockchain.rs  cli.rs  collusion_analyzer.rs  coordinator.rs  enhanced_reputation.rs  error.rs  failover.rs  gossip.rs  integrity_checker.rs  lib.rs  main.rs  memory_layer.rs  metadata.rs  metrics.rs  network_adapter.rs  node_layer.rs  orchestrator.rs  persistence.rs  provider_layer.rs  quality_assessment.rs  quality_scheduler.rs  reputation.rs  service_bus.rs  storage.rs  traits.rs  transaction.rs  utils.rs  validator_reputation.rs  verifiable_package.rs  verification_sdk.rs
src/audit/: mod.rs
src/consensus/: certificate.rs  messages.rs  mod.rs  pbft.rs  quality_aware_consensus.rs  view_change.rs
src/failover/: circuit_breaker.rs
src/grpc/: mod.rs
src/lie_algebra/: aggregator.rs  mapper.rs  metric.rs  mod.rs  types.rs
src/memory_layer/: async_storage.rs  context_sharding.rs  kv_compression.rs  kv_compressor.rs  kv_index.rs  multi_level_cache.rs  prefetcher.rs  redis_backend.rs  tiered_storage.rs
src/network/: libp2p_network.rs  mod.rs  p2p_network.rs
src/node_layer/: rpc_server.rs
src/provider_layer/: aliyun_http_client.rs  aliyun_qwen_provider.rs  http_client.rs  llm_provider.rs  ollama_provider.rs  ollama_stream.rs
src/services/: commitment_service.rs  failover_service.rs  inference_orchestrator.rs  mod.rs  qaas_service.rs
tests/: README.md  architecture_tests.rs  async_commit_stress_tests.rs  chaos_tests.rs  concurrency_tests.rs  gossip_integration_tests.rs  integration_tests.rs  kv_cache_integration.rs  ollama_integration_tests.rs  pbft_integration_tests.rs  property_tests.proptest-regressions  property_tests.rs
