[package]
name = "block_chain_with_context"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
ed25519-dalek = "2.0"
rand = "0.8"
hex = "0.4"
thiserror = "1.0"
log = "0.4"

# 异步运行时（支持真正的异步上链）
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "macros", "fs"], optional = true }

# HTTP 客户端（用于调用推理服务和 RPC）
reqwest = { version = "0.11", features = ["json"], optional = true }

# 序列化（用于磁盘存储）
bincode = { version = "1.3", optional = true }

# 测试依赖
[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tokio-test = "0.4"
tempfile = "3"
bincode = "1.3"
env_logger = "0.10"

[features]
default = []
async = ["tokio"]
http = ["reqwest", "tokio"]
tiered-storage = ["tokio", "bincode"]
