[package]
name = "block_chain_with_context"
version = "0.5.0"
edition = "2021"

[workspace]
members = [
    ".",
    "kv",
]

[dependencies]
# KV Cache 模块（本地子 crate）
kv-cache = { path = "./kv", features = ["compression", "tiered-storage"] }

# 核心依赖
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
ed25519-dalek = "2.0"
rand = "0.9"
hex = "0.4"
thiserror = "2.0"
log = "0.4"
anyhow = "1.0"
async-trait = "0.1"

# 异步运行时（支持真正的异步上链）
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "macros", "fs", "rt"] }

# Tokio 流工具（用于 gRPC 流）
tokio-stream = { version = "0.1", features = ["sync"] }

# 日志和追踪
tracing = "0.1"
tracing-subscriber = "0.3"

# UUID 生成
uuid = { version = "1", features = ["v4"] }

# Futures 工具
futures = "0.3"

# Token 分割（Ollama 集成）
tiktoken-rs = "0.6"

# 异步流工具（Ollama 流式响应）
async-stream = "0.3"

# CLI 工具
clap = { version = "4", features = ["derive"] }

# 环境变量加载（用于 API Key 配置）
dotenv = "0.15"

# HTTP 客户端（用于调用推理服务和 RPC）
# 使用 rustls 避免 OpenSSL 依赖
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }

# Bytes（用于流处理）
bytes = "1"

# SSE 流解析（用于 LLM 流式响应）
eventsource-stream = "0.2"

# 重试逻辑
tokio-retry = "0.3"

# Web 框架（用于节点 RPC 服务）
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace", "limit"], optional = true }

# gRPC 支持（用于跨节点通信）
tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }
prost-types = { version = "0.13", optional = true }

# 序列化（用于磁盘存储）
bincode = { version = "1.3", optional = true }

# 断路器模式支持
dashmap = "5.5"

# KV Cache 优化
bloomfilter = "1.0"
zstd = "0.13"

# 李群/李代数运算（线性代数库）
nalgebra = "0.33"

# 远程存储支持（L3 缓存）
redis = { version = "0.27", optional = true, features = ["tokio-comp"] }

# P2P 网络支持（libp2p）
libp2p = { version = "0.53", optional = true, features = ["tokio", "tcp", "noise", "yamux", "gossipsub", "mdns", "dns", "identify", "ping"] }

# 状态持久化（RocksDB）
rocksdb = { version = "0.22", optional = true }

# 监控指标（Prometheus）
prometheus = "0.13"

# 测试依赖
[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tokio-test = "0.4"
tempfile = "3"
bincode = "1.3"
env_logger = "0.11"
axum = "0.8"
wiremock = "0.6"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

# 基准测试配置
[[bench]]
name = "lie_group_bench"
harness = false

[build-dependencies]
tonic-build = { version = "0.12", optional = true }

[features]
# 默认启用核心功能：HTTP RPC + gRPC 跨节点通信 + 分层存储
# gRPC 需要 protoc 编译器，构建失败请参考 build.rs 提示
# tiered-storage 是 gRPC 的基础依赖
default = ["rpc", "grpc", "tiered-storage"]
# RPC 支持（HTTP + gRPC）
rpc = ["axum", "tower", "tower-http"]
# gRPC 支持（跨节点通信，生产环境推荐启用）
# 启用前请确保已安装 protobuf-compiler
grpc = ["tonic", "prost", "prost-types", "tonic-build"]
# 分层存储支持（KV Cache 优化）
tiered-storage = ["bincode"]
# 远程存储支持（L3 缓存）
remote-storage = ["redis"]
# P2P 网络支持（libp2p 简化版）
p2p = ["libp2p"]
# 状态持久化支持（RocksDB）
persistence = ["rocksdb"]
