[package]
name = "kv-cache"
version = "0.1.0"
edition = "2021"
description = "高性能分布式 KV 缓存系统，为区块链项目提供 KV 缓存支持"
license = "MIT"

[features]
default = ["compression", "tiered-storage"]
compression = ["dep:zstd"]
tiered-storage = ["compression", "dep:tokio", "dep:tokio-stream", "dep:futures"]
redis-backend = ["tiered-storage", "dep:redis"]
metrics = ["dep:prometheus"]

[dependencies]
# 核心依赖
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
bytes = "1.5"

# 哈希和加密
sha2 = "0.10"
digest = "0.10"

# 并发和数据结构
dashmap = "5.5"
parking_lot = "0.12"
crossbeam = "0.8"

# 异步运行时
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "macros", "fs", "rt"], optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }

# Futures 用于异步流
futures = { version = "0.3", optional = true }

# 压缩
zstd = { version = "0.13", optional = true }

# Bloom Filter (使用与主项目一致的 bloomfilter)
bloomfilter = "1.0"

# Redis 后端 (使用与主项目一致的版本)
redis = { version = "0.27", features = ["tokio-comp"], optional = true }

# 指标
prometheus = { version = "0.13", optional = true }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"

# 时间
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# 序列化和错误处理
bincode = "1.3"
anyhow = "1.0"
async-trait = "0.1"

# 工具
hex = "0.4"

# LRU 缓存（HashMap + 双向链表实现 O(1)）
linked-hash-map = "0.5"

[dev-dependencies]
# 测试框架
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tempfile = "3"
rand = "0.8"
tokio-test = "0.4"
env_logger = "0.11"

[[bench]]
name = "performance_bench"
harness = false

[lib]
name = "kv_cache"
path = "src/lib.rs"
